--- a/1-resolution-histogram-threshold/a-decrease-spatial-resolution.ipynb
+++ b/1-resolution-histogram-threshold/a-decrease-spatial-resolution.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,17 +13,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "originalImage = cv2.imread(\"./photos/image5.jpeg\", cv2.IMREAD_GRAYSCALE)\n",
+    "originalImage = cv2.imread(\"../photos/image5.jpeg\", cv2.IMREAD_GRAYSCALE)\n",
     "originalImage = cv2.resize(originalImage, (512, 512))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
