Use different size of mask (3x3, 5x5, 7x7) with average filter for noise suppression and observe their performance in term of PSNR

--- a/3-noise-suppression/a-average-and-median-spatial-filters.ipynb
+++ b/3-noise-suppression/a-average-and-median-spatial-filters.ipynb
@@ -93,7 +93,7 @@
    "outputs": [],
    "source": [
     "def calcPNSR(originalImage, degradedImage):\n",
-    "    mse = np.mean((originalImage - degradedImage) ** 2)\n",
+    "    mse = np.mean((originalImage - degradedImage) ** 2) # Mean Squared Error (MSE)\n",
     "    if mse == 0:\n",
     "        return np.inf\n",
     "    maxPixelValue = 255.0\n",
