--- a/test.ipynb
+++ b/test.ipynb
@@ -376,6 +376,47 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hermonicMean: [[ 2  5  3]\n",
+      " [ 6 24 10]\n",
+      " [ 5 15  6]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def geoMetricMean(image, kernelSize = 2):\n",
+    "    filteredImage  = np.zeros_like(image)\n",
+    "    padSize = kernelSize // 2\n",
+    "    paddedImage = np.pad(image, (padSize, padSize), mode='constant')\n",
+    "\n",
+    "    for i in range (padSize, image.shape[0] + padSize):\n",
+    "        for j in range(padSize, image.shape[1] + padSize):\n",
+    "            window = paddedImage[i - padSize: i+padSize+1, j - padSize: j+padSize+1]\n",
+    "\n",
+    "            pixel = 1\n",
+    "            # Calculate the product of pixel values in the window\n",
+    "            for r in range(window.shape[0]):\n",
+    "                for k in range(window.shape[1]):\n",
+    "                    pixel = pixel * int(window[r, k])\n",
+    "\n",
+    "            pixel = pixel ** (1/(kernelSize ** 2)) # Take the geometric mean by raising the product to the power of (1 / (kernelSize^2))\n",
+    "\n",
+    "            if pixel > 255:\n",
+    "                pixel = 255\n",
+    "\n",
+    "            filteredImage[i-padSize, j-padSize]= pixel\n",
+    "    return filteredImage\n",
+    "print(f\"hermonicMean: {geoMetricMean(image)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
