--- a/1-resolution-histogram-threshold/a-decrease-spatial-resolution.ipynb
+++ b/1-resolution-histogram-threshold/a-decrease-spatial-resolution.ipynb
@@ -67,10 +67,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(20 // 2)"
+   ]
   }
  ],
  "metadata": {
