--- a/test.ipynb
+++ b/test.ipynb
@@ -417,10 +417,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'cv2' has no attribute 'hstack'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 24\u001b[0m\n\u001b[0;32m     22\u001b[0m original_half \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mresize(image, (image\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m/\u001b[39m\u001b[38;5;241m/\u001b[39m \u001b[38;5;241m2\u001b[39m, image\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m/\u001b[39m\u001b[38;5;241m/\u001b[39m \u001b[38;5;241m2\u001b[39m))\n\u001b[0;32m     23\u001b[0m modified_half \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mresize(binary_image \u001b[38;5;28;01mif\u001b[39;00m new_bpp \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m image, (image\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m/\u001b[39m\u001b[38;5;241m/\u001b[39m \u001b[38;5;241m2\u001b[39m, image\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m/\u001b[39m\u001b[38;5;241m/\u001b[39m \u001b[38;5;241m2\u001b[39m))\n\u001b[1;32m---> 24\u001b[0m combined_image \u001b[38;5;241m=\u001b[39m \u001b[43mcv2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mhstack\u001b[49m([original_half, modified_half])\n\u001b[0;32m     26\u001b[0m \u001b[38;5;66;03m# Show the combined image\u001b[39;00m\n\u001b[0;32m     27\u001b[0m cv2\u001b[38;5;241m.\u001b[39mimshow(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mOriginal vs. Modified\u001b[39m\u001b[38;5;124m\"\u001b[39m, combined_image)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: module 'cv2' has no attribute 'hstack'"
+     ]
+    }
+   ],
+   "source": [
+    "import cv2\n",
+    "\n",
+    "# Load the image\n",
+    "image = cv2.imread(\"./photos/Rose-1024x1024.tif\")\n",
+    "\n",
+    "# Get the current number of bits per pixel\n",
+    "bpp = image.dtype.itemsize * 8\n",
+    "\n",
+    "# Calculate the new number of bits per pixel\n",
+    "new_bpp = bpp - 1\n",
+    "\n",
+    "# Check if the new bpp is binary (1 bit)\n",
+    "if new_bpp == 1:\n",
+    "    # Convert the image to binary using thresholding\n",
+    "    threshold, binary_image = cv2.threshold(image, 127, 255, cv2.THRESH_BINARY)\n",
+    "else:\n",
+    "    # Reduce the intensity levels by one bit\n",
+    "    mask = 2 ** (bpp - new_bpp) - 1\n",
+    "    image = cv2.bitwise_and(image, mask)\n",
+    "\n",
+    "# Display the original and modified images side-by-side\n",
+    "original_half = cv2.resize(image, (image.shape[1] // 2, image.shape[0] // 2))\n",
+    "modified_half = cv2.resize(binary_image if new_bpp == 1 else image, (image.shape[1] // 2, image.shape[0] // 2))\n",
+    "combined_image = cv2.hstack([original_half, modified_half])\n",
+    "\n",
+    "# Show the combined image\n",
+    "cv2.imshow(\"Original vs. Modified\", combined_image)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()\n"
+   ]
   }
  ],
  "metadata": {
