--- a/1-resolution-histogram-threshold/a-decrease-spatial-resolution.ipynb
+++ b/1-resolution-histogram-threshold/a-decrease-spatial-resolution.ipynb
@@ -66,6 +66,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Decreasing spatial resolution in an image results in:\n",
+    "\n",
+    "Loss of fine details and reduced sharpness.\n",
+    "Pixelation and increased visibility of individual pixels.\n",
+    "Blurry appearance and limitations in representing high-frequency patterns.\n",
+    "Increased noise visibility and smoothing of gradients.\n",
+    "Reduction in file size.\n",
+    "Loss of visual information, especially in complex areas"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
