--- a/2-brightness-enhencement/a-brightness-enhencement.ipynb
+++ b/2-brightness-enhencement/a-brightness-enhencement.ipynb
@@ -116,11 +116,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Enhancing brightness in an image results in improved visibility, enhanced contrast, and more pronounced highlights. It can impact color saturation, influence mood, and aesthetics. However, excessive adjustments may lead to overexposed areas, noise amplification, and dynamic range compression. Careful application is necessary to avoid artifacts and loss of detail."
+   ]
   }
  ],
  "metadata": {
