--- a/2-brightness-enhencement/c-difference-original-image-vs-msb-image.ipynb
+++ b/2-brightness-enhencement/c-difference-original-image-vs-msb-image.ipynb
@@ -73,6 +73,34 @@
     "plt.imshow(differenceImage, cmap='gray')\n",
     "plt.title(f\"Difference Image\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finding the difference image between the original image and the image obtained by considering only the last three bits (MSB) can serve various purposes, depending on the specific context and goals of image processing. Here are some potential benefits:\n",
+    "\n",
+    "1. **Highlighting Fine Details:**\n",
+    "   - The last three bits often represent the least significant variations in pixel values. By subtracting this component from the original image, you may highlight fine details or subtle textures that are less prominent in the overall image.\n",
+    "\n",
+    "2. **Noise Reduction:**\n",
+    "   - The least significant bits are more likely to be influenced by noise. Subtracting these bits can help reduce the impact of noise in the image, providing a cleaner representation of the underlying structures.\n",
+    "\n",
+    "3. **Enhancing Important Features:**\n",
+    "   - In certain applications, the important features may be encoded in the more significant bits. Subtracting the last three bits allows you to emphasize these important features while suppressing less critical information.\n",
+    "\n",
+    "4. **Visualizing Compression Artifacts:**\n",
+    "   - When images undergo compression, artifacts may be introduced, especially in the least significant bits. The difference image can highlight areas where compression artifacts are most noticeable.\n",
+    "\n",
+    "5. **Steganography Detection:**\n",
+    "   - In steganography, information can be hidden in the least significant bits. Analyzing the difference image may reveal subtle patterns or alterations that indicate the presence of hidden information.\n",
+    "\n",
+    "6. **Understanding Bitwise Impact:**\n",
+    "   - The difference image provides insights into how the last three bits contribute to the overall pixel values. This understanding can be valuable for analyzing the impact of bitwise operations on image representation.\n",
+    "\n",
+    "7. **Research and Analysis:**\n",
+    "   - In certain research scenarios, analyzing the difference image can be part of a broader investigation into image encoding, compression, or representation. It may be useful for understanding the characteristics of the image data."
+   ]
   }
  ],
  "metadata": {
