--- a/3-noise-suppression/a-average-and-median-spatial-filters.ipynb
+++ b/3-noise-suppression/a-average-and-median-spatial-filters.ipynb
@@ -92,7 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calcPNSR(originalImage, degradedImage):\n",
+    "def calcPNSR(originalImage, degradedImage): #Peak Signal-to-Noise Ratio\n",
     "    mse = np.mean((originalImage - degradedImage) ** 2) # Mean Squared Error (MSE)\n",
     "    if mse == 0:\n",
     "        return np.inf\n",
@@ -227,11 +227,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Average Mean Filtered Image:\n",
+    "The term \"average mean filtered image\" seems redundant, as the mean filter itself involves averaging pixel values. The filtered image is often referred to simply as the \"mean filtered image.\"\n",
+    "Use Cases and Considerations:\n",
+    "Image Smoothing:\n",
+    "\n",
+    "Mean filters are frequently used for pre-processing tasks where a smoother version of the image is desired. This can be useful before performing operations like edge detection or segmentation.\n",
+    "Kernel Size:\n",
+    "\n",
+    "The size of the neighborhood, or kernel, used for averaging determines the extent of smoothing. Larger kernel sizes result in more extensive smoothing, but details may be lost.\n",
+    "Trade-off:\n",
+    "\n",
+    "While mean filtering is effective in reducing noise and smoothing, it may also result in a loss of fine details and edges. The choice of filter size is often a trade-off between noise reduction and preserving important features."
+   ]
   }
  ],
  "metadata": {
