--- a/3-noise-suppression/a-average-and-median-spatial-filters.ipynb
+++ b/3-noise-suppression/a-average-and-median-spatial-filters.ipynb
@@ -243,6 +243,18 @@
     "\n",
     "While mean filtering is effective in reducing noise and smoothing, it may also result in a loss of fine details and edges. The choice of filter size is often a trade-off between noise reduction and preserving important features."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Average (Mean) Filter:\n",
+    "\n",
+    "An average filter involves replacing each pixel value with the average value of its neighboring pixels in a local region (kernel). This process is aimed at smoothing or blurring the image.\n",
+    "Median Filter:\n",
+    "\n",
+    "A median filter replaces each pixel value with the median value of its neighboring pixels in a local region (kernel). The median filter is particularly effective at reducing impulse noise (such as salt-and-pepper noise) while preserving edges and details."
+   ]
   }
  ],
  "metadata": {
