butterworth and gaussian low pass filter

--- a/4-filtering-in-frequency-domain/a-butterworth-and-gaussian-low-pass-filter.ipynb
+++ b/4-filtering-in-frequency-domain/a-butterworth-and-gaussian-low-pass-filter.ipynb
@@ -145,11 +145,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Both Butterworth and Gaussian filters are commonly used in image processing for low-pass filtering, which means they allow low-frequency components to pass through while attenuating high-frequency components.\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
