ideal low pass filter

--- a/4-filtering-in-frequency-domain/b-ideal-low-pass-filter.ipynb
+++ b/4-filtering-in-frequency-domain/b-ideal-low-pass-filter.ipynb
@@ -131,6 +131,13 @@
     "    plt.imshow(idealFilteredImage, cmap='gray')\n",
     "    plt.title(f\"Ideal Low Pass Filtered Image (r = {i*10})\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "An Ideal Low-Pass Filter is used for its simplicity in theoretical discussions, illustrating frequency domain concepts, and serving as a benchmark for real-world filters. While not practical due to its sharp cutoff and infinite extension, it aids in educational settings and exploring ideal filter characteristics. In practice, other filters like Butterworth and Gaussian are preferred for their realistic behavior and effective implementation."
+   ]
   }
  ],
  "metadata": {
