--- a/4-filtering-in-frequency-domain/c-edge-detection.ipynb
+++ b/4-filtering-in-frequency-domain/c-edge-detection.ipynb
@@ -144,6 +144,46 @@
     "# DFT Magnitude Spectrum for Original Image\n",
     "plotImage(3, 3, 8, magnitudeSpectrum, \"DFT Magnitude Spectrum\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Gaussian High-Pass Filters and Ideal High-Pass Filters are used in image and signal processing for specific applications. Here are reasons why each type of high-pass filter might be used:\n",
+    "\n",
+    "### Gaussian High-Pass Filter:\n",
+    "\n",
+    "1. **Smooth Roll-off:**\n",
+    "   - Gaussian High-Pass Filters have a smooth and gradual roll-off in the frequency domain. This property helps avoid abrupt transitions, reducing the likelihood of ringing artifacts in the spatial domain.\n",
+    "\n",
+    "2. **Variable Sharpening:**\n",
+    "   - The standard deviation parameter in a Gaussian filter allows for variable sharpening. By adjusting the standard deviation, one can control the extent of high-frequency emphasis, providing flexibility in image enhancement.\n",
+    "\n",
+    "3. **Noise Reduction:**\n",
+    "   - Gaussian filters inherently incorporate a degree of smoothing, which can act as a form of noise reduction. While they are high-pass filters, they can simultaneously suppress high-frequency noise.\n",
+    "\n",
+    "4. **Edge Enhancement:**\n",
+    "   - Gaussian high-pass filtering emphasizes edges and details in an image. This can be beneficial for tasks such as edge detection or feature extraction.\n",
+    "\n",
+    "5. **Realistic Implementation:**\n",
+    "   - Gaussian filters are more realistic and practical than ideal filters. Their smooth characteristics make them suitable for a wide range of applications where a gradual transition between frequencies is desirable.\n",
+    "\n",
+    "### Ideal High-Pass Filter:\n",
+    "\n",
+    "1. **Conceptual Simplicity:**\n",
+    "   - Similar to the Ideal Low-Pass Filter, the Ideal High-Pass Filter is conceptually simple. It serves as a theoretical model for understanding high-pass filtering concepts and behaviors.\n",
+    "\n",
+    "2. **Theoretical Analysis:**\n",
+    "   - In theoretical discussions and analyses, the Ideal High-Pass Filter is used to explain the concept of attenuating low-frequency components while allowing high-frequency components to pass.\n",
+    "\n",
+    "3. **Educational Purposes:**\n",
+    "   - In educational settings, the Ideal High-Pass Filter is introduced to help students understand fundamental high-pass filtering principles and their impact on signal or image content.\n",
+    "\n",
+    "4. **Comparison Benchmark:**\n",
+    "   - Similar to the ideal low-pass case, the Ideal High-Pass Filter can be used as a benchmark for comparing real-world high-pass filters. It helps highlight challenges and compromises in practical high-pass filter design.\n",
+    "\n",
+    "In summary, Gaussian High-Pass Filters are preferred for their smoothness, variable sharpening, and practical implementation, especially in applications where noise reduction and edge enhancement are crucial. Ideal High-Pass Filters are used more for theoretical analysis, education, and as a conceptual baseline for understanding high-pass filtering."
+   ]
   }
  ],
  "metadata": {
