--- a/5-morphological-operations/b-opening-and-closing-operations.ipynb
+++ b/5-morphological-operations/b-opening-and-closing-operations.ipynb
@@ -148,6 +148,49 @@
     "closedImage = dilation(originalImage, structuringElement)\n",
     "plotImage(2, 2, 4, closedImage, \"Image after Closing\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Opening and closing are morphological operations in image processing that involve the combination of erosion and dilation operations with a structuring element. These operations are often used to modify or enhance the shape and structure of objects within binary images.\n",
+    "\n",
+    "### Opening Operation:\n",
+    "\n",
+    "**Definition:**\n",
+    "- Opening is a sequence of an erosion operation followed by a dilation operation.\n",
+    "- It is denoted as \\( A \\circ B \\), where \\( A \\) is the input image, and \\( B \\) is the structuring element.\n",
+    "\n",
+    "**Effect:**\n",
+    "- Opening is useful for removing small objects, smoothing object boundaries, and separating objects that are close to each other.\n",
+    "- It helps in preserving larger connected structures while eliminating small protrusions.\n",
+    "\n",
+    "**Mathematically:**\n",
+    "\\[ (A \\circ B) = (A \\ominus B) \\oplus B \\]\n",
+    "\n",
+    "### Closing Operation:\n",
+    "\n",
+    "**Definition:**\n",
+    "- Closing is a sequence of a dilation operation followed by an erosion operation.\n",
+    "- It is denoted as \\( A \\bullet B \\), where \\( A \\) is the input image, and \\( B \\) is the structuring element.\n",
+    "\n",
+    "**Effect:**\n",
+    "- Closing is effective in filling small holes, connecting broken structures, and smoothing object boundaries.\n",
+    "- It helps in preserving smaller structures while filling gaps between larger structures.\n",
+    "\n",
+    "**Mathematically:**\n",
+    "\\[ (A \\bullet B) = (A \\oplus B) \\ominus B \\]\n",
+    "\n",
+    "### Key Points:\n",
+    "\n",
+    "- **Structuring Element (B):** The choice of the structuring element affects the outcome of opening and closing operations. It determines the neighborhood considered during erosion and dilation.\n",
+    "\n",
+    "- **Binary Images:** Opening and closing are typically applied to binary images, where objects are represented by connected regions of pixels.\n",
+    "\n",
+    "- **Sequential Application:** Opening and closing can be applied sequentially or iteratively to achieve specific morphological transformations. For example, a double opening operation (\\( (A \\circ B) \\circ B \\)) is equivalent to a single opening.\n",
+    "\n",
+    "These operations are fundamental in morphological image processing and find applications in tasks such as noise removal, object separation, and feature extraction. Opening and closing operations are part of a broader set of morphological operations used for image analysis and manipulation."
+   ]
   }
  ],
  "metadata": {
